feat: add JWT authentication and user registration/login endpoints

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URI=mongodb+srv://pramodsupun06:SUdCnqI7ZdMmV9st@cluster0.uodsnzh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECRET=your-strong-secret-key
