--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
